@@ -1,6 +1,7 @@
 0.24:
- * Added proper exception handling.
  * Now using standard autotools (Flameeyes).
+ * Added proper exception handling.
+ * Print errors to stderr.
 
 0.23:
  * Hiding filenames no longer hides directory names.
